# Fast-Ground-Segmentation-Based-on-JPC

./: README.md
code/: CMakeLists.txt  jpc_groundremove.cpp  jpc_groundremove.h  main.cpp
jpc_seg/: CMakeLists.txt  package.xml
jpc_seg/src/: jpc_groundremove.cpp  jpc_groundremove.h  kitti_file_main.cpp  kitti_topic_main.cpp
